# redgiant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  common.go  compose.yml  environment-dev.yml  gen.go  gen_zerr.go  go.mod  go.sum  i18n.go  opts.go  pyproject.toml  redgiant.go  sungrow.go  types.go  types_test.go  utils.go
.github/workflows/: build.yml  test.yml
examples/prometheus-grafana/: compose.yml
examples/prometheus-grafana/grafana/: grafana.ini
examples/prometheus-grafana/grafana/dashboards/: benchmark.json
examples/prometheus-grafana/prometheus/: prometheus.yml
http/: http.go
internal/cmd/: health.go  live.go  root.go  serve.go  server.go  summary.go  viper.go
internal/config/: config.go
internal/errors/: errors.go  zerr.go
internal/health/: health.go
internal/live/: live.go
internal/redgiant/: redgiant.go  sungrow.go
internal/serve/: api.go  main.go  serve.go  server.go
internal/serve/static/: index.html  openapi.yaml
internal/server/: api.go  db.go  main.go  server.go  templates.go  ui.go
internal/server/static/: index.html  openapi.yaml  style.css
internal/server/templates/: base.html  index.html
internal/summary/: summary.go
internal/utils/: utils.go
main/: main.go
src/red_giant/: __init__.py  __main__.py  _api.py  _cli.py  _compat.py  _i18n.py  _red_giant.py  schema.py
