[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "red-giant"
description = "Python and REST API for Sungrow inverters"
license = {file = "LICENSE"}
authors = [
    { name = "Philip Meier", email = "github.pmeier@posteo.de" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "anyio",
    "fastapi",
    "httpx",
    "httpx_ws",
    "prometheus-client",
    "rich",
    "typer",
    "typing_extensions >= 4.0.0; python_version<'3.11'",
    "uvicorn",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/pmeier/red-giant"

[project.scripts]
red-giant = "red_giant._cli:app"

[tool.setuptools_scm]
write_to = "src/red_giant/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"

[tool.ruff.lint]
select = [
    "E",
    "F",
    # import sorting
    "I001"
]
# Ignore line too long, because the error can only occur for lines that cannot be broken
# up
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports and imports not at the top of the file in __init__.py files
"__init__.py" = ["F401", "E402"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --tb=short --asyncio-mode=auto"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
]
xfail_strict = true

[tool.mypy]
files = "src/red_giant"

show_error_codes = true
pretty = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

allow_redefinition = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true

warn_return_any = true
warn_unused_configs = true
